--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile fileTree(include: ['*.aidl'], dir: '../aidl')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':aidl')
 }
 
 task styleCheck(type: Checkstyle) {
