--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,21 +27,24 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile fileTree(include: ['*.aidl'], dir: '../aidl')
+    compile project(':aidl')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile project(':aidl')
 }
 
 task styleCheck(type: Checkstyle) {
     configFile new File(rootDir, "config/checkstyle.xml")
     source 'src'
     include '**/*.java'
-    exclude '**/gen/**'
+    exclude '**/gen/**', '**/mobeta/**'
 
     classpath = files()
 }
