--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
     <application
         android:name=".LBApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -35,6 +34,8 @@
             android:name=".activity.OutParaDetailActivity" />
         <activity
             android:name=".activity.InParaDetailActivity" />
+        <activity
+            android:name=".activity.AboutActivity" />
 
         <service
             android:name=".LBService"
