--- a/sdk/src/main/AndroidManifest.xml
+++ b/sdk/src/main/AndroidManifest.xml
@@ -1,10 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="org.tianjyan.luban">
-
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
-
-    </application>
-
+<manifest package="org.tianjyan.luban">
 </manifest>
