--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,10 @@
             android:name=".activity.OutParaDetailActivity" />
         <activity
             android:name=".activity.InParaDetailActivity" />
-        <activity
+        <activitygi
             android:name=".activity.AboutActivity" />
+        <activity
+            android:name=".activity.SettingActivity" />
 
         <service
             android:name=".LBService"
