--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile fileTree(include: ['*.aidl'], dir: '../aidl')
-    compile project(':aidl')
+    compile project(':luban.aidl')
     compile 'com.jakewharton:butterknife:8.7.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.facebook.stetho:stetho:1.5.0'
