--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':luban.aidl', ':luban.sdk', ':luban.sampleclient', ':luban.infrastructure.abs', ':luban.host', ':luban.infrastructure.theme'
+include ':app', ':luban.aidl', ':luban.sdk', ':luban.sampleclient', ':luban.infrastructure.abs', ':luban.host', ':luban.infrastructure.theme', ':luban.plugin.op', ':luban.plugin.ip'
