--- a/luban.plugin.ip/build.gradle
+++ b/luban.plugin.ip/build.gradle
@@ -19,8 +19,13 @@ android {
 }
 
 dependencies {
+    def daggerVersion = '2.11'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile project(':luban.infrastructure.abs')
     compile project(':luban.infrastructure.theme')
-    compile 'com.google.dagger:dagger:2.11'
+    compile "com.google.dagger:dagger:$daggerVersion"
+    compile "com.google.dagger:dagger-android:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+
 }
