Finish op Plugin and client

--- a/luban.plugin.ip/build.gradle
+++ b/luban.plugin.ip/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
 
+    compile project(path: ':luban.infrastructure.common')
 }
