--- a/luban.host/build.gradle
+++ b/luban.host/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     compile "com.google.dagger:dagger:$daggerVersion"
     compile "com.google.dagger:dagger-android:$daggerVersion"
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile project(path: ':luban.infrastructure.common')
+    compile project(path: ':luban.infrastructure.common')
+    compile project(path: ':luban.infrastructure.client')
 }
 
 task styleCheck(type: Checkstyle) {
