--- a/luban.plugin.ip/src/main/AndroidManifest.xml
+++ b/luban.plugin.ip/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
-<manifest package="org.tianjyan.luban.plugin.ip">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.tianjyan.luban.plugin.ip">
+    <application>
+        <activity android:name=".activity.InParaDetailActivity" />
+    </application>
 </manifest>
