--- a/luban.infrastructure.client/build.gradle
+++ b/luban.infrastructure.client/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'checkstyle'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
@@ -35,4 +36,13 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile "com.google.dagger:dagger:$daggerVersion"
     compile "com.google.dagger:dagger-android:$daggerVersion"
+}
+
+task styleCheck(type: Checkstyle) {
+    configFile new File(rootDir, "config/checkstyle.xml")
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**', '**/mobeta/**'
+
+    classpath = files()
 }
