--- a/luban.infrastructure.common/build.gradle
+++ b/luban.infrastructure.common/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'checkstyle'
 
 android {
     compileSdkVersion 25
@@ -23,4 +24,13 @@ dependencies {
     compile project(path: ':luban.infrastructure.abs')
 
     compile 'com.android.support:appcompat-v7:25.3.1'
+}
+
+task styleCheck(type: Checkstyle) {
+    configFile new File(rootDir, "config/checkstyle.xml")
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**', '**/mobeta/**'
+
+    classpath = files()
 }
