--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ proguard/
 
 # Log Files
 *.log
+!luban.plugin.log
 
 # Android Studio Navigation editor temp files
 .navigation/
@@ -53,3 +54,4 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+luban.plugin.floating/libs/
