--- a/luban.infrastructure.client/build.gradle
+++ b/luban.infrastructure.client/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'checkstyle'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    compileSdkVersion versions.targetSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
+        versionCode versions.code
+        versionName versions.name
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
@@ -25,17 +25,18 @@ android {
 }
 
 dependencies {
-    def daggerVersion = '2.11'
+    compile libs.aidl
+    compile libs.abs
+    compile libs.common
 
-    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
+    annotationProcessor libs.daggercompiler
+    annotationProcessor libs.daggerprocessor
 
-    compile project(path: ':luban.infrastructure.abs')
-    compile project(path: ':luban.infrastructure.common')
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile "com.google.dagger:dagger:$daggerVersion"
-    compile "com.google.dagger:dagger-android:$daggerVersion"
+    compile libs.dagger
+    compile libs.daggerandroid
+    compile libs.eventbus
+    compile libs.rxjava
+    compile libs.rxandroid
 }
 
 task styleCheck(type: Checkstyle) {
