--- a/luban.infrastructure.abs/build.gradle
+++ b/luban.infrastructure.abs/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    compileSdkVersion versions.targetSdk
+    buildToolsVersion versions.buildTools
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
+        versionCode versions.code
+        versionName versions.name
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
     buildTypes {
         release {
@@ -20,8 +25,8 @@ android {
 }
 
 dependencies {
-    compile 'javax.inject:javax.inject:1'
-    compile project(path: ':luban.aidl')
+    compile libs.aidl
+    compile libs.inject
 }
 
 task styleCheck(type: Checkstyle) {
