Give up Vector Drawable when sdk version is lower than 20 (include 20)

--- a/luban.infrastructure.abs/build.gradle
+++ b/luban.infrastructure.abs/build.gradle
@@ -27,6 +27,11 @@ android {
 dependencies {
     compile libs.aidl
     compile libs.inject
+
+    compile libs.appcompat
+
+    compile libs.dagger
+    compile libs.daggerandroid
 }
 
 task styleCheck(type: Checkstyle) {
