--- a/luban.host/build.gradle
+++ b/luban.host/build.gradle
@@ -31,6 +31,7 @@ android {
         buildConfigField "boolean", "ENABLE_LEAK_CANARY", "false"
         buildConfigField "String", "GIT_COMMIT_SHA", '"' + gitSha() + '"'
         buildConfigField "String", "BUILD_TIME", '"' + buildTime() + '"'
+        // vectorDrawables.useSupportLibrary = true
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
@@ -59,6 +60,7 @@ dependencies {
     annotationProcessor libs.daggercompiler
     annotationProcessor libs.daggerprocessor
 
+    compile libs.appcompat
     compile libs.supportv4
     compile libs.recyclerview
 
