--- a/luban.host/build.gradle
+++ b/luban.host/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile libs.abs
     compile libs.client
     compile libs.crash
+    compile libs.logging
 
     compile libs.common
     compile libs.floating
