--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ proguard/
 # Log Files
 *.log
 !luban.plugin.log
+!luban.infrastructure.log
 
 # Android Studio Navigation editor temp files
 .navigation/
