Add Logcat plugin to help catch global crash. As we don't have a root action, so we should use adb to grant the permission: `adb shell pm org.tianjyan.luban.host android.permission.READ_LOGS`

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ ext {
             ip: project(':luban.plugin.ip'),
             log: project(':luban.plugin.log'),
             op: project(':luban.plugin.op'),
+            logcat: project(':luban.plugin.logcat'),
 
             inject: 'javax.inject:javax.inject:1',
             recyclerview:'com.android.support:recyclerview-v7:25.3.1',
