--- a/luban.plugin.common/src/main/AndroidManifest.xml
+++ b/luban.plugin.common/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest package="org.tianjyan.luban.plugin.common">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.tianjyan.luban.plugin.common">
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
