--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/*
 
 # Keystore files
 *.jks
@@ -56,3 +52,6 @@ freeline.py
 freeline/
 freeline_project_description.json
 luban.plugin.floating/libs/
+
+# ndk
+*/.cxx/
