--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
@@ -24,10 +25,10 @@ ext {
             code: 1,
             name: '1.0',
             minSdk: 19,
-            targetSdk: 25,
-            buildTools: '26.0.1',
+            targetSdk: 31,
+            buildTools: '31.0.0',
             dagger: '2.11',
-            butterknife: '8.7.0',
+            butterknife: '10.2.3',
             eventbus: '3.0.0'
     ]
 
@@ -46,22 +47,23 @@ ext {
             logcat: project(':luban.plugin.logcat'),
 
             inject: 'javax.inject:javax.inject:1',
-            recyclerview:'com.android.support:recyclerview-v7:25.3.1',
-            appcompat: 'com.android.support:appcompat-v7:25.3.1',
-            supportv4: 'com.android.support:support-v4:25.3.1',
-            annotations: 'com.android.support:support-annotations:25.3.1',
+            recyclerview:'androidx.recyclerview:recyclerview:1.2.1',
+            appcompat: 'androidx.appcompat:appcompat:1.4.1',
+            supportv4: 'androidx.legacy:legacy-support-v4:1.0.0',
+            annotations: 'androidx.annotation:annotation:1.3.0',
 
             stetho: 'com.facebook.stetho:stetho:1.5.0',
-            leakcanarytest: 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1',
+            leakcanary: 'com.squareup.leakcanary:leakcanary-android:2.9.1',
             leakcanarydebug: 'com.squareup.leakcanary:leakcanary-android:1.5.1',
             leakcanarydebugMemoryLeak: 'com.squareup.leakcanary:leakcanary-android:1.5.1',
 
-            daggercompiler: "com.google.dagger:dagger-compiler:$versions.dagger",
+            daggerandroid: "com.google.dagger:dagger-android:$versions.dagger",
+            daggersupport: "com.google.dagger:dagger-android-support:$versions.dagger",
             daggerprocessor: "com.google.dagger:dagger-android-processor:$versions.dagger",
+            dagger: "com.google.dagger:dagger:$versions.dagger",
+            daggercompiler: "com.google.dagger:dagger-compiler:$versions.dagger",
             butterknifecompiler: "com.jakewharton:butterknife-compiler:$versions.butterknife",
 
-            dagger: "com.google.dagger:dagger:$versions.dagger",
-            daggerandroid: "com.google.dagger:dagger-android:$versions.dagger",
             rxjava: 'io.reactivex.rxjava2:rxjava:2.1.0',
             rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
             butterknife: "com.jakewharton:butterknife:$versions.butterknife",
