--- a/luban.infrastructure.crash/build.gradle
+++ b/luban.infrastructure.crash/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
-apply plugin: 'me.tatarka.retrolambda'
 
 def gitSha() {
     return 'git rev-parse --short HEAD'.execute().text.trim()
@@ -30,7 +29,7 @@ android {
 }
 
 dependencies {
-    compile libs.annotations
+    implementation libs.annotations
 }
 
 task styleCheck(type: Checkstyle) {
