--- a/luban.infrastructure.log/build.gradle
+++ b/luban.infrastructure.log/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion versions.targetSdk
@@ -25,15 +24,17 @@ android {
 }
 
 dependencies {
-    compile libs.abs
-    compile libs.common
-    compile libs.logger
+    implementation libs.abs
+    implementation libs.common
+    implementation libs.logger
 
     annotationProcessor libs.daggercompiler
     annotationProcessor libs.daggerprocessor
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
 
-    compile libs.dagger
-    compile libs.daggerandroid
+    implementation libs.dagger
+    implementation libs.daggerandroid
 }
 
 task styleCheck(type: Checkstyle) {
