--- a/luban.plugin.op/build.gradle
+++ b/luban.plugin.op/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jakewharton.butterknife'
 
 android {
@@ -26,24 +25,28 @@ android {
 }
 
 dependencies {
-    compile libs.aidl
-    compile libs.abs
-    compile libs.common
+    implementation libs.aidl
+    implementation libs.abs
+    implementation libs.common
 
     annotationProcessor libs.butterknifecompiler
     annotationProcessor libs.daggercompiler
     annotationProcessor libs.daggerprocessor
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")
 
-    compile libs.appcompat
-    compile libs.supportv4
-    compile libs.recyclerview
+    implementation libs.appcompat
+    implementation libs.supportv4
+    implementation libs.recyclerview
 
-    compile libs.butterknife
-    compile libs.dagger
-    compile libs.daggerandroid
-    compile libs.eventbus
-    compile libs.rxjava
-    compile libs.rxandroid
+    implementation libs.butterknife
+    implementation libs.dagger
+    implementation libs.daggerandroid
+    implementation libs.eventbus
+    implementation libs.rxjava
+    implementation libs.rxandroid
+
+    implementation 'com.google.errorprone:error_prone_annotations:2.13.1'
 }
 
 task styleCheck(type: Checkstyle) {
