--- a/luban.sampleclient/build.gradle
+++ b/luban.sampleclient/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'checkstyle'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion versions.targetSdk
@@ -36,8 +35,8 @@ android {
 }
 
 dependencies {
-    compile libs.sdk
-    compile libs.appcompat
+    implementation libs.sdk
+    implementation libs.appcompat
 }
 
 task styleCheck(type: Checkstyle) {
