--- a/luban.sdk/build.gradle
+++ b/luban.sdk/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'checkstyle'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion versions.targetSdk
@@ -25,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile libs.aidl
+    implementation libs.aidl
 }
 
 task styleCheck(type: Checkstyle) {
